New Pages added

--- a/React_proj/web_project/src/components/pages/Page.css
+++ b/React_proj/web_project/src/components/pages/Page.css
@@ -1,4 +1,9 @@
 /* src/components/pages/WomenPage.css */
+body {
+  background-color: #333; /* Set your desired dark background color */
+  color: #fff; /* Set your desired light text color */
+}
+
 .women-page {
   padding: 20px;
 }
@@ -18,6 +23,8 @@
   border: 1px solid #ddd;
   padding: 10px;
   text-align: center;
+  background-color: #444; /* Set your desired dark card background color */
+  color: #fff; /* Set your desired light text color */
 }
 
 .product-card img {
@@ -29,68 +36,51 @@
   margin-top: 10px;
 }
 
-/* Add more styles based on your design */
-/* Add or update your existing CSS with the following styles */
-
 /* Navbar.css */
 .navbar {
+  color:#fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: #f8f8f8; /* Set your desired background color */
+  background-color: #222; /* Set your desired dark background color */
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 1000;
+  
 }
-
-
+.clothing-shop-link{
+  color: #fff;
+}
 
 .logo {
   text-decoration: none;
-  color: #333; /* Set your desired text color */
+  color: #fff; /* Set your desired light text color */
 }
 
 .logo img {
   width: 100px; /* Adjust the width as needed */
 }
 
-.nav-links {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .nav-links a {
   text-decoration: none;
-  color: #333; /* Set your desired text color */
-  margin: 5px 0;
+  color: #fff; /* Set your desired light text color */
+  margin: 0 20px; /* Adjust the margin as needed */
   font-weight: bold; /* Adjust the font weight as needed */
 }
 
 .clothing-shop-link {
-  font-size: 18px; /* Adjust the font size as needed */
-  
-}
-
-.search-cart {
-  display: flex;
-  align-items: center;
+  font-size: 40px; /* Adjust the font size as needed */
+  margin-right: 20px; /* Adjust the margin as needed */
 }
 
 .search-cart a {
   margin-left: 20px; /* Adjust the margin as needed */
   text-decoration: none;
-  color: #333; /* Set your desired text color */
+  color: #fff; /* Set your desired light text color */
 }
 
-.search-cart svg {
-  margin-right: 55px; /* Adjust the margin as needed */
-}
-
-/* Add more styles as needed */
-/* Add or update your existing CSS with the following styles */
 
 .nav-links {
   display: flex;
@@ -107,6 +97,15 @@
 .clothing-shop-link {
   font-size: 40px; /* Adjust the font size as needed */
   margin-right: 20px; /* Adjust the margin as needed */
+}
+
+.shipping-policy{
+  align-items: center;
+
+}
+.page-content{
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 
