--- a/React_proj/web_project/src/components/pages/Login.css
+++ b/React_proj/web_project/src/components/pages/Login.css
@@ -11,7 +11,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    background-color: #b29cc7;
+    background-color: #403e41;
     width: 300px; /* Adjust the width as needed */
     padding: 20px;
     border-radius: 12px;
@@ -45,7 +45,7 @@
   
   button {
     width: 35%;
-    height: 40px;
+    height: 50px;
     margin: 12px auto 10%;
     color: #fff;
     background: #c2a815;
